--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -2,8 +2,8 @@
 @using One.Toast
 @using One.Toast.Services
 @inject NavigationManager NavigationManager
-<PageTitle>Oubaich Toast</PageTitle>
-<h1>Oubaich Toast</h1>
+<PageTitle>One Toast</PageTitle>
+<h1>One Toast</h1>
 <div>
     <button class="btn btn-info" @onclick="@(() => ToastService.ShowInfo("I'm an INFO message"))">Info Toast</button>
     <button class="btn btn-success" @onclick="@(() => ToastService.ShowSuccess("I'm a SUCCESS message with a custom heading"))">Success Toast</button>
